docker/kubernetes/backend-service-internal.yml
apiVersion: v1
kind: Service
metadata:
  name: backend-srv-internal
spec:
  type: ClusterIP
  selector:
    app: backend-deploy-app
  ports:
    - protocol: TCP
      port: 3000
      targetPort: 3000
