docker/kubernetes/backend-service.yml
apiVersion: v1
kind: Service
metadata:
  name: backend-srv
spec:
  type: LoadBalancer
  externalTrafficPolicy: Local
  selector:
    app: backend-deploy
  ports:
    - protocol: TCP
      port: 4000
      targetPort: 3000
      nodePort: 30010
